[package]
name = "submitter"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.35"
tokio = { version = "1.43", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
regex = "1.11.1"
which = "7.0"
dialoguer = "0.11"
crossterm = "0.28"
open = "5.3"
rand = "0.8.5"
rs_sha512 = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
clipboard = "0.5"
html-escape = "0.2"
