[package]
name = "submitter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
dialoguer = "0.11"
crossterm = "0.28"
open = "5.3"
rand = "0.8.5"
rs_sha512 = "0.1"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json", "cookies"] }
clipboard = "0.5"
html-escape = "0.2"
md-5 = "0.10"
hmac = "0.12"

scraper = "0.22"
dirs = "6"
